<resources>
    <string name="app_name">Join.v1.0</string>
    <string name="reg">Зарегестрироваться</string>
    <string name="account_start">Готовы создать аккаунт?</string>
    <string name="sing_in">Вход</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="text1">Присоеденяйся, отдыхай, ищи новые компании</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>